# Meanshift

./: CMakeLists.txt  LICENSE
demo/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/MeanShift/: MeanShift.h  simd_math_prims.h
